--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
@@ -31,11 +31,12 @@
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.11",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "~20.0.3",
     "nx": "15.4.2",
     "prettier": "^2.6.2",
+    "react-router-dom": "^6.6.1",
     "react-test-renderer": "18.2.0",
     "sass": "^1.55.0",
     "typescript": "~4.8.2",
@@ -51,7 +52,8 @@
     "@types/xml-parser": "^1.2.30",
     "fast-xml-parser": "4.0.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "packageManager": "yarn@3.3.1"
 }
